--- a/index.html
+++ b/index.html
@@ -28,19 +28,19 @@
       <header class="p-3 text-bg-dark">
       <div class="container">
         <div class="d-flex flex-wrap align-items-center justify-content-center justify-content-lg-start">
-          <a href="/" class="d-flex align-items-center mb-2 mb-lg-0 text-white text-decoration-none">
+          <a href="./index.html" class="d-flex align-items-center mb-2 mb-lg-0 text-white text-decoration-none">
             <img class="bi me-2" width="32" height="32" src="./Logos/logo_min_white.png">
           </a>
 
           <ul class="nav col-12 col-lg-auto me-lg-auto mb-2 justify-content-center mb-md-0">
-            <li><a href="#" class="nav-link px-2 text-secondary">Home</a></li>
-            <li><a href="#" class="nav-link px-2 text-white">Products</a></li>
-            <li><a href="#" class="nav-link px-2 text-white">About</a></li>
+            <li><a href="./index.html" class="nav-link px-2 text-secondary">Home</a></li>
+            <li><a href="./products" class="nav-link px-2 text-white">Products</a></li>
+            <li><a href="./About" class="nav-link px-2 text-white">About</a></li>
           </ul>
 
           <div class="text-end">
-            <button type="button" class="btn btn-outline-light me-2">Login</button>
-            <button type="button" class="btn btn-warning">Sign-up</button>
+            <a class="btn btn-outline-light me-2" href="./login" role="button">Login</a>
+            <a class="btn btn-warning" href="./Register">Sign-up</a>
           </div>
         </div>
       </div>
